1998-04-21  Changwoo Ryu  <cwryu@adam.kaist.ac.kr>

	* io-gtk.c (to_destination_auto): Fixed a bug (NO play again
	also make a new game).
