@@ -1,5 +1,5 @@
-/* score-dialog.c
-   Copyright (C) 1997 Ryu Changwoo
+/* score-dialog.c --
+   Copyright (C) 1998 Free Software Foundation, Inc.
 
    This program is free software; you can redistribute it and'or modify
    it under the terms of the GNU General Public License as published by
@@ -13,9 +13,10 @@
 
    You should have received a copy of the GNU General Public License
    along with this program; if not, write to the Free Software
-   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.  */
+   Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307
+   USA */
 
-/* Written by Ryu Changwoo <cwryu@eve.kaist.ac.kr>. */
+/* Written by Changwoo Ryu <cwryu@adam.kaist.ac.kr>. */
 
 
 #include <config.h>
@@ -28,24 +29,16 @@
 
 
 static void
-score_dialog_callback_close(GtkWidget *w, gpointer client_data)
+score_dialog_callback_close(GtkWidget *w, gpointer data)
 {
-  gtk_widget_destroy ((GtkWidget *)client_data);
+  gtk_widget_destroy ((GtkWidget *)data);
 }
 
 static void
-score_dialog_callback_clear(GtkWidget *w, gpointer client_data)
+score_dialog_callback_clear(GtkWidget *w, gpointer data)
 {
   score_clear();
-  gtk_widget_destroy ((GtkWidget *)client_data);
-}
-
-
-static gint
-score_dialog_callback_delete (GtkWidget *w, GdkEvent *e, gpointer client_data)
-{
-  gtk_widget_destroy((GtkWidget *)client_data);
-  return FALSE;
+  gtk_widget_destroy ((GtkWidget *)data);
 }
 
 
@@ -54,55 +47,29 @@ score_dialog (void)
 {
   GtkWidget *dialog;
   GtkWidget *label;
-  GtkWidget *button;
-  GtkWidget *hbox;
   GtkWidget *all_boxes;
 
   char *formatstring[20];	/* FIXME: is it enough? */
-
   int i;
 
-  dialog = gtk_window_new (GTK_WINDOW_DIALOG);
-  gtk_container_border_width (GTK_CONTAINER(dialog), 10);
-  GTK_WINDOW(dialog)->position = GTK_WIN_POS_MOUSE;
-  gtk_window_set_title(GTK_WINDOW(dialog), _("Score"));
-  gtk_signal_connect (GTK_OBJECT (dialog), "delete_event",
-                      GTK_SIGNAL_FUNC (score_dialog_callback_delete),
-                      dialog);
+  dialog = gnome_dialog_new (_("Score"), "Button_Ok", _("Clear"), NULL);
+  gnome_dialog_set_default (GNOME_DIALOG (dialog), 0);
 
-  all_boxes = gtk_vbox_new (FALSE, 5);
-  gtk_container_add (GTK_CONTAINER(dialog), all_boxes);
+  gnome_dialog_button_connect (GNOME_DIALOG (dialog), 0,
+			       GTK_SIGNAL_FUNC (score_dialog_callback_close),
+			       dialog);
+  gnome_dialog_button_connect (GNOME_DIALOG (dialog), 1,
+			       GTK_SIGNAL_FUNC (score_dialog_callback_clear),
+			       dialog);
   
   score_formatstring(formatstring);
-
   for (i = 0; formatstring[i]; i++)
     {
       label = gtk_label_new (formatstring[i]);
-      gtk_box_pack_start(GTK_BOX(all_boxes), label, TRUE, TRUE, 0);
+      gtk_box_pack_start (GTK_BOX(GNOME_DIALOG(dialog)->vbox),
+			  label, TRUE, TRUE, 0);
       gtk_widget_show(label);
     }
-
-  hbox = gtk_hbox_new (TRUE, 5);
-  gtk_box_pack_start (GTK_BOX(all_boxes), hbox, TRUE, TRUE, 0);
-
-  button = gtk_button_new_with_label (_("OK"));
-  gtk_signal_connect (GTK_OBJECT(button), "clicked",
-		      GTK_SIGNAL_FUNC(score_dialog_callback_close), dialog);
-  gtk_box_pack_start(GTK_BOX(hbox), button, TRUE, TRUE, 5);
-  gtk_window_set_focus(GTK_WINDOW(dialog), button);
-  gtk_widget_show(button);
-
-  button = gtk_button_new_with_label (_("Clear"));
-  gtk_signal_connect (GTK_OBJECT(button), "clicked",
-		      GTK_SIGNAL_FUNC(score_dialog_callback_clear), dialog);
-  gtk_box_pack_start(GTK_BOX(hbox), button, TRUE, TRUE, 5);
-  gtk_widget_show(button);
-
-  gtk_widget_show(hbox);
-  gtk_widget_show (all_boxes);
-  gtk_widget_show(dialog);
-
-  return dialog;
+  gtk_widget_show (dialog);
 }
-
 
