@@ -1,5 +1,14 @@
+1998-04-24  Changwoo Ryu  <cwryu@adam.kaist.ac.kr>
+
+	* option-dialog.c: Use GnomePropertyBox.
+
+	* score-dialog.c: Use GnomeDialog.
+
+	* *.[ch]: Changed copyright to FSF.  Changed FSF's address to
+	Cambridge, MA 02139.
+
 1998-04-21  Changwoo Ryu  <cwryu@adam.kaist.ac.kr>
 
 	* io-gtk.c (to_destination_auto): Fixed a bug (NO play again
-	also make a new game).
+	also makes a new game).
 
